--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fitness Application</string>
+    <string name="app_name">KeepTrainApp</string>
     <string name="title_statistic">Statistic</string>
     <string name="title_calendar">Calendar</string>
     <string name="title_sets">Sets</string>
